<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
		http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.rocsg</groupId>
	<artifactId>fijiyama</artifactId>
	<version>4.0.10</version>
	<packaging>jar</packaging>
	<url>https://imagej.net/plugins/fijiyama/</url>


	<name>fijiyama</name>
	<description>Fijiyama : a versatile registration tool for 3D multimodal time-lapse imaging</description>
	<inceptionYear>2019</inceptionYear>
	<licenses>
		<license>
			<name>LGPL</name>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git://github.com/Rocsg/Fijiyama.git</connection>
		<developerConnection>scm:git:ssh://github.com:Rocsg/Fijiyama.git</developerConnection>
		<url>https://github.com/Rocsg/Fijiyama/tree/master/</url>
	</scm>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/Rocsg/FijiYama/issues</url>
	</issueManagement>

	<properties>
		<package-name>io.github.rocsg.fijiyama</package-name>
		<license.licenseName>lgpl</license.licenseName>
		<main-class>fijiyamaplugin.Fijiyama_GUI</main-class>
		<license.copyrightOwners>Copyleft</license.copyrightOwners>
  	    <maven.compiler.source>8</maven.compiler.source>
	    <maven.compiler.target>8</maven.compiler.target>
	     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
	</properties>

	<repositories>
	  <repository>
	   	  <id>imagej.public</id>
	      <url>http://maven.imagej.net/content/groups/public</url>
      </repository>
        <repository>
		<id>scijava.public</id>
		<url>https://maven.scijava.org/content/groups/public</url>
	  </repository>
      
	</repositories>

	<developers>
		<developer>
			<id>Rocsg</id>
			<name>Romain Fernandez</name>
		</developer>
	</developers>
		
	<dependencies>
		<dependency>
		    <groupId>org.jgrapht</groupId>
		    <artifactId>jgrapht-core</artifactId>
		    <version>1.3.1</version>
		</dependency>

  		<dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.2</version>
            <scope>test</scope>
        </dependency>
     	<dependency>
		      <groupId>com.opencsv</groupId>
		      <artifactId>opencsv</artifactId>
		      <version>5.4</version>
	  	</dependency>
      
        <dependency>
             <groupId>sc.fiji</groupId>
             <artifactId>Fiji_Plugins</artifactId>
             <version>3.1.1</version>
         </dependency>
		  
		<dependency>
		    <groupId>net.imagej</groupId>
		    <artifactId>ij</artifactId>
		    <version>1.53i</version>
		</dependency>
		
		<dependency>
		    <groupId>sc.fiji</groupId>
		    <artifactId>VIB-lib</artifactId>
		    <version>2.2.0</version>
		</dependency>

		<dependency>
		    <groupId>org.scijava</groupId>
		    <artifactId>scijava-java3d</artifactId>
		    <version>0.1.0</version>
		</dependency>

		<dependency>
		    <groupId>java3d</groupId>
		    <artifactId>j3d-core</artifactId>
		    <version>1.5.2</version>
		</dependency>

		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.7</version>
		</dependency>
		

		<dependency>
		    <groupId>org.itk.simple</groupId>
		    <artifactId>simpleitk</artifactId>
		    <version>0.9.0</version>
		    <type>jar</type>
		</dependency>

		<dependency>
		    <groupId>sc.fiji</groupId>
		    <artifactId>3D_Viewer</artifactId>
		    <version>4.0.3</version>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-math3</artifactId>
		    <version>3.6.1</version>
		</dependency>
	</dependencies>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrhsnap</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrhrel</id>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	 <build>
	  <plugins>
	      <plugin>
	          <artifactId>maven-surefire-plugin</artifactId>
              <version>2.22.2</version>
          </plugin>
          <plugin>
              <artifactId>maven-failsafe-plugin</artifactId>
              <version>2.22.2</version>
          </plugin>
		  
		  
		  <plugin>
		    <groupId>org.sonatype.plugins</groupId>
		    <artifactId>nexus-staging-maven-plugin</artifactId>
		    <version>1.6.7</version>
		    <extensions>true</extensions>
		    <configuration>
		        <serverId>ossrhsnap</serverId>
		        <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
		        <autoReleaseAfterClose>true</autoReleaseAfterClose>
		    </configuration>
		 </plugin> 
		 <plugin>
		    <groupId>org.sonatype.plugins</groupId>
		    <artifactId>nexus-staging-maven-plugin</artifactId>
		    <version>1.6.7</version>
		    <extensions>true</extensions>
		    <configuration>
		        <serverId>ossrhrel</serverId>
		        <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
		        <autoReleaseAfterClose>true</autoReleaseAfterClose>
		    </configuration>
		</plugin>
		  
	   <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-source-plugin</artifactId>
	    <version>2.2.1</version>
	    <executions>
	     <execution>
	      <id>attach-sources</id>
	      <goals>
	       <goal>jar-no-fork</goal>
	      </goals>
	     </execution>
	    </executions>
	   </plugin>
	   <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-javadoc-plugin</artifactId>
	    <version>3.2.0</version>
	    <executions>
	     <execution>
	      <id>attach-javadocs</id>
	      <goals>
	       <goal>jar</goal>
	      </goals>
	     </execution>
	    </executions>
	   </plugin>
	   <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-gpg-plugin</artifactId>
	    <version>1.5</version>
	    <executions>
	     <execution>
	      <id>sign-artifacts</id>
	      <phase>verify</phase>
	      <goals>
	       <goal>sign</goal>
	      </goals>
	     </execution>
	    </executions>
	   </plugin>
	  </plugins>
	 </build>

</project>
